vscode extension entry

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "version": "0.0.0",
   "engines": {
     "vscode": "^1.90.0"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.91.0"
   }
 }
