--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "code-in-doc",
   "displayName": "Code in Document",
   "description": "Better support for code inside documents.",
+  "type": "module",
   "version": "0.0.0",
   "engines": {
     "vscode": "^1.90.0"
   },
+  "scripts": {
+    "compile": "rollup --config rollup.config.js"
+  },
   "devDependencies": {
-    "@types/vscode": "^1.91.0"
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/vscode": "^1.91.0",
+    "rollup": "^4.18.0",
+    "tslib": "^2.6.3"
   }
 }
