--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
   "engines": {
     "vscode": "^1.90.0"
   },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codindoc/vscode.git"
+  },
   "scripts": {
-    "compile": "rollup --config rollup.config.js"
+    "compile": "node precompile && rollup --config rollup.config.js",
+    "build": "npm run compile && cd extension && vsce package && cd .."
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.14.9",
     "@types/vscode": "^1.91.0",
+    "@vscode/vsce": "^2.29.0",
     "rollup": "^4.18.0",
     "tslib": "^2.6.3"
   }
