--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/vscode": "^1.91.0",
     "@vscode/vsce": "^2.29.0",
     "prettier": "^3.3.2",
+    "prettier-plugin-sh": "^0.14.0",
     "rollup": "^4.18.0",
     "tslib": "^2.6.3"
   }
