--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "prettier --write .",
     "check": "prettier --check .",
     "compile": "node precompile && rollup --config rollup.config.js",
-    "build": "npm run compile && cd extension && vsce package && cd .."
+    "build": "npm run compile && cd extension && vsce package && cd ..",
+    "test": "vitest --run"
   },
   "dependencies": {
     "vscode-languageclient": "^9.0.1"
@@ -30,6 +31,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-sh": "^0.14.0",
     "rollup": "^4.18.0",
-    "tslib": "^2.6.3"
+    "tslib": "^2.6.3",
+    "vitest": "^1.6.0"
   }
 }
