--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Launch for Node",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/extension",
-        "--folder-uri=${workspaceRoot}/examples"
+        "--folder-uri=${workspaceRoot}/example"
       ],
       "preLaunchTask": "compile",
       "request": "launch",
