rollup dev mode optimize enable console log

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         "--extensionDevelopmentPath=${workspaceFolder}/extension",
         "--folder-uri=${workspaceRoot}/example"
       ],
-      "preLaunchTask": "compile",
+      "preLaunchTask": "prelaunch",
       "request": "launch",
       "type": "extensionHost"
     }
