--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,4 @@
 {
   "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "compile",
-      "type": "npm",
-      "script": "compile"
-    }
-  ]
+  "tasks": [{"label": "prelaunch", "type": "npm", "script": "prelaunch"}]
 }
