--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Better support for code inside documents.",
   "type": "module",
   "version": "0.0.0",
+  "main": "extension.js",
   "engines": {
     "vscode": "^1.90.0"
   },
@@ -16,6 +17,7 @@
     "format": "prettier --write .",
     "check": "prettier --check .",
     "compile": "node precompile && rollup --config rollup.config.js",
+    "prelaunch": "node precompile && rollup --config rollup.config.dev.js",
     "build": "npm run compile && cd extension && vsce package && cd ..",
     "test": "vitest --run"
   },
@@ -23,6 +25,7 @@
     "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.14.9",
